Fix dropdown to avoid elements jumping around on menu toggle

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,9 +28,25 @@ div.main-wrapper {
 header {
   display: flex;
   justify-content: center;
-  font-size: 1.5rem;
   gap: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
+header label {
+  font-size: 1.5rem;
+}
+button[data-dropdown="toggle"] {
+  padding-top: 4px;
+}
+div.dropdown {
+  margin-right: 40px;
+  text-align: right;
+}
+ul.dropdown-list {
+  position: absolute;
+}
+
 input#search {
   height: 2rem;
 }
